@@ -361,25 +361,33 @@ VARIABLES
        else   Text to show if any of the above are not true
 
 
-       exec shell command
+       exec command
 	      Executes a shell command and displays the output in conky. warn-
 	      ing: this takes a lot more resources than other  variables.  I'd
 	      recommend coding wanted behaviour in C and posting a patch.
 
 
-       execbar shell command
+       execbar command
 	      Same  as	exec,  except  if  the	first  value return is a value
 	      between 0-100, it will use that number for a bar. The  size  for
 	      the bar is currently fixed, but that may change in the future.
 
 
-       execgraph shell command
+       execgraph command
 	      Same as execbar, but graphs values
 
 
        execi interval, shell command
 	      Same  as exec but with specific interval. Interval can't be less
 	      than update_interval in configuration.
+
+
+       execibar interval command
+	      Same as execbar, except with an interval
+
+
+       execigraph interval command
+	      Same as execigraph, but takes an interval arg graphs values
 
 
        font font
